fixed hudson issues